--- a/index.html
+++ b/index.html
@@ -197,66 +197,58 @@
                 </div>
 
                 <div class="uk-container uk-container-large uk-position-relative" uk-slider="finite: true" uk-height-match="target: > div > div > div > div">
-                    <div class="uk-slider-items uk-margin-top uk-margin-bottom" uk-height-match="target: > div > div > .uk-card-body">
+                    <div class="uk-slider-items uk-margin-top uk-margin-bottom" uk-height-match="target: > div > div > .details">
 
                         <div id="aac" class="uk-width-medium uk-width-1-4@m">
-                            <div class="uk-background-default uk-card uk-card-body uk-border-rounded-large uk-margin-small-right">
+                            <div class="uk-background-default uk-card uk-padding uk-border-rounded-large uk-margin-small-right">
                                 <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                     <img src="img/aac.webp" class="" />
                                 </div>
-                                <div class="uk-card-body uk-padding-remove uk-text-center@m">
+                                <div class="details uk-text-center@m">
                                     <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen Campaign</div>
                                     <div class="fs-12 in fw-500">eBook, email &amp; landing page</div>
                                 </div>
-                                <div class="uk-margin-small uk-text-center@m">
                                     <div class="uk-navbar-item"><a class="uk-background-muted uk-border-pill fw-500 uk-link-reset">Coming soon</a></div>
-                                </div>
                             </div>
                         </div>
 
                         <div id="bsa" class="uk-width-medium uk-width-1-4@m">
-                            <div class="uk-background-default uk-card uk-card-body uk-border-rounded-large uk-margin-small-right">
+                            <div class="uk-background-default uk-card uk-padding uk-border-rounded-large uk-margin-small-right">
                                 <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                     <img src="img/bsa-sjac.webp" class="" />
                                 </div>
-                                <div class="uk-card-body uk-padding-remove uk-text-center@m">
+                                <div class="details uk-text-center@m">
                                     <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Fundraising Appeal</div>
                                     <div class="fs-12 in fw-500">Direct Mail Package</div>
                                 </div>
-                                <div class="uk-margin-small uk-text-center@m">
                                     <div class="uk-navbar-item"><a class="uk-background-muted uk-border-pill fw-500 uk-link-reset">Coming soon</a></div>
-                                </div>
                             </div>
                         </div>
 
                         <div id="mack" class="uk-width-medium uk-width-1-4@m">
-                            <div class="uk-background-default uk-card uk-card-body uk-border-rounded-large uk-margin-small-right">
+                            <div class="uk-background-default uk-card uk-padding uk-border-rounded-large uk-margin-small-right">
                                 <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                     <img src="img/mack.webp" class="" />
                                 </div>
-                                <div class="uk-card-body uk-padding-remove uk-text-center@m">
+                                <div class="details uk-text-center@m">
                                     <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen Survey</div>
                                     <div class="fs-12 in fw-500">Direct mail package, email &amp; survey website</div>
                                 </div>
-                                <div class="uk-margin-small uk-text-center@m">
-                                    <div class="uk-navbar-item"><a class="uk-background-muted uk-border-pill fw-500 uk-link-reset">Coming soon</a></div>
-                                </div>
+                                <div class="uk-navbar-item"><a class="uk-background-muted uk-border-pill fw-500 uk-link-reset">Coming soon</a></div>
 
                             </div>
                         </div>
 
                         <div id="rg" class="uk-width-medium uk-width-1-4@m">
-                            <div class="uk-background-default uk-card uk-card-body uk-border-rounded-large">
+                            <div class="uk-background-default uk-card uk-padding uk-border-rounded-large">
                                 <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                     <img src="img/rategenius.webp" class="" />
                                 </div>
-                                <div class="uk-card-body uk-padding-remove uk-text-center@m">
+                                <div class="details uk-text-center@m">
                                     <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen </div>
                                     <div class="fs-12 in fw-500">Multivariate direct mail package</div>
                                 </div>
-                                <div class="uk-margin-small uk-text-center@m">
-                                    <div class="uk-navbar-item"><a class="uk-background-muted uk-border-pill fw-500 uk-link-reset">Coming soon</a></div>
-                                </div>
+                                <div class="uk-navbar-item"><a class="uk-background-muted uk-border-pill fw-500 uk-link-reset">Coming soon</a></div>
 
                             </div>
                         </div>
