Mobile nav updates

--- a/5winsights.html
+++ b/5winsights.html
@@ -32,7 +32,7 @@
         <header>
             <div class="uk-background-muted ">
                 <div uk-sticky="show-on-up: true">
-                    <nav class="uk-navbar-container uk-navbar-default no-border uk-box-shadow-small" uk-dropnav="align:center">
+                    <nav class="uk-navbar-container uk-navbar-default no-border uk-box-shadow-small" uk-dropnav="align:center;mode: click">
                         <div class="uk-container uk-container-xlarge" uk-navbar>
                             <!-- mobile nav -->
                             <div class="uk-navbar-item uk-navbar-left uk-hidden@m uk-margin-small-right">
