--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" >
+s<html lang="en" >
     <head>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta name="viewport" content="initial-scale=1" />
@@ -32,7 +32,7 @@
         <header>
             <div class="uk-background-muted">
                 <div uk-sticky="show-on-up: true">
-                    <nav class="uk-navbar-container uk-navbar-default no-border uk-box-shadow-small" uk-dropnav="align:center">
+                    <nav class="uk-navbar-container uk-navbar-default no-border uk-box-shadow-small" uk-dropnav="align:center;mode: click">
                         <div class="uk-container uk-container-xlarge" uk-navbar>
                             <!-- mobile nav -->
                             <div class="uk-navbar-item uk-navbar-left uk-hidden@m uk-margin-small-right">
