--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-s<html lang="en" >
+<html lang="en" >
     <head>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta name="viewport" content="initial-scale=1" />
