--- a/5winsights.html
+++ b/5winsights.html
@@ -333,7 +333,7 @@
                         </div>
 
                         <div class="uk-width-4-5@l">
-                            <h4 class="fs-20 fw-600 uk-margin-small-bottom uk-margin-top">Carousel slider</h4>
+                            <h4 class="fs-20 fw-600 uk-margin-small-bottom uk-margin-top">LinkedIn Carousel slider</h4>
                             <p class="fs-14 uk-margin-small-top">I designed this LinkedIn carousel as a key asset for a pre-conference marketing campaign to drive booth attendance. The five-slide sequence strategically outlines a range of incentives, from free AI donor insights and case studies on proven results to exclusive discounts, all designed to capture interest and convert online engagement into in-person booth visits.</p>
                         </div>
                     </div>
@@ -343,8 +343,8 @@
                             <div>
                                 <img src="img/5winsights/li/5W_VFRI-speaker_LinkedIn.webp" class="uk-border-rounded-medium" />
                             </div>
-                            <h4 class="fs-20 fw-600 uk-margin-small-bottom uk-margin-top">Post graphic</h4>
-                            <p class="fs-14 uk-margin-small-top">I designed promotional graphic to announce a speaking session by 5W's CEO at a major industry conference. The key challenge was creating a co-branded visual that harmoniously featured both the 5W Insights and the conference logo. I leveraged elements from 5W's recent brand refresh to create a dynamic layout, establishing a clear visual hierarchy that drove attention to the session details while maintaining brand consistency for both entities.</p>
+                            <h4 class="fs-20 fw-600 uk-margin-small-bottom uk-margin-top">LinkedIn Post graphic</h4>
+                            <p class="fs-14 uk-margin-small-top">I designed this promotional graphic to announce a speaking session by 5W's CEO at a major industry conference. The key challenge was creating a co-branded visual that harmoniously featured both the 5W Insights and the conference logo. I leveraged elements from 5W's recent brand refresh to create a dynamic layout, establishing a clear visual hierarchy that drove attention to the session details while maintaining brand consistency for both entities.</p>
                         </div>
                     </div>
                 </div>
