--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
                         <div id="mack" class="uk-width-medium uk-width-1-4@m">
                             <div class="uk-background-default uk-card uk-padding uk-border-rounded-large uk-margin-small-right">
-                                <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
+                                <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom uk-padding uk-padding-remove-vertical uk-flex uk-flex-middle">
                                     <img src="img/mack.webp" class="" />
                                 </div>
                                 <div class="details uk-text-center@m">
