--- a/5winsights.html
+++ b/5winsights.html
@@ -172,11 +172,10 @@
 
                 <div class="uk-container uk-container-large">
 
-                    <div class="uk-text-left">
-                        <h2 class="fs-18 fw-500 uk-text-uppercase">// Conference Booth</h2>
-                        <hr />
+                    <div class="uk-display-inline-block">
+                        <h2 class="fs-18 fw-500 uk-text-uppercase uk-margin-remove" uk-scrollspy="cls:typing">// Conference Booth</h2>
                     </div>
-
+                    <hr />
 
 
                     <div class="uk-background-muted uk-border-rounded-large uk-padding uk-margin">
@@ -289,10 +288,10 @@
 
             <div class="uk-section uk-background-muted" uk-height-viewport="expand:true">
                 <div class="uk-container uk-container-large">     
-                    <div class="uk-text-left">
-                        <h2 class="fs-18 fw-500 uk-text-uppercase">// LinkedIn</h2>
-                        <hr />
+                    <div class="uk-display-inline-block">
+                        <h2 class="fs-18 fw-500 uk-text-uppercase uk-margin-remove" uk-scrollspy="cls:typing">// LinkedIn</h2>
                     </div>
+                    <hr />
 
                     <div class="uk-background-muted uk-padding-small uk-border-rounded-large uk-margin-bottom">
 
