--- a/mack.html
+++ b/mack.html
@@ -217,7 +217,9 @@
                         <div class="uk-width-expand@s">
 
                             <div class="uk-section uk-container uk-container-expand" id="login">
-                                <h2 class="fs-18 uk-text-uppercase">// Survey Login</h2>
+                                <div class="uk-display-inline-block">
+                                    <h2 class="fs-18 fw-500 uk-text-uppercase uk-margin-remove" uk-scrollspy="cls:typing">// Survey Login</h2>
+                                </div>
                                 <hr />
 
                                 <div class="uk-background-muted uk-padding uk-padding-remove-horizontal uk-border-rounded-large">
@@ -250,7 +252,9 @@
                             </div>
 
                             <div class="uk-section uk-container uk-container-expand" id="info">
-                                <h2 class="fs-18 uk-text-uppercase">// Contact Information Form</h2>
+                                <div class="uk-display-inline-block">
+                                    <h2 class="fs-18 fw-500 uk-text-uppercase uk-margin-remove" uk-scrollspy="cls:typing">// Contact Information Form</h2>
+                                </div>
                                 <hr />
 
                                 <div class="uk-background-muted uk-padding uk-padding-remove-horizontal uk-border-rounded-large">
@@ -284,7 +288,9 @@
 
 
                             <div class="uk-section uk-container uk-container-expand" id="questions-1">
-                                <h2 class="fs-18 uk-text-uppercase">// Survey Questions</h2>
+                                <div class="uk-display-inline-block">
+                                    <h2 class="fs-18 fw-500 uk-text-uppercase uk-margin-remove" uk-scrollspy="cls:typing">// Survey Questions</h2>
+                                </div>
                                 <hr />
 
                                 <div class="uk-background-muted uk-padding uk-padding-remove-horizontal uk-border-rounded-large">
