--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
             <!-- Main Content -->
             <div class="uk-section" uk-height-viewport="expand:true">
                 <div class="uk-container uk-container-large">
-                    <div class="uk-text-left">
-                        <h2 class="fs-18 fw-500 uk-text-uppercase">// Current Projects</h2>
-                        <hr />
+                    <div class="uk-display-inline-block">
+                        <h2 class="fs-18 fw-500 uk-text-uppercase uk-margin-remove" uk-scrollspy="cls:typing">// Current Projects</h2>
                     </div>
+                    <hr />
 
                     <div class="uk-background-default uk-border-rounded-large uk-padding-large">
                         <div id="mack-survey" uk-grid uk-scrollspy="target:div;delay:75;repeat: true;">
@@ -159,10 +159,10 @@
 
             <div class="uk-section" uk-height-viewport="expand:true">
                 <div class="uk-container uk-container-large">
-                    <div class="uk-text-left">
-                        <h2 class="fs-18 fw-500 uk-text-uppercase">// Past Work</h2>
-                        <hr />
-                    </div>
+                        <div class="uk-display-inline-block">
+                            <h2 class="fs-18 fw-500 uk-text-uppercase uk-margin-remove" uk-scrollspy="cls:typing">// Past Work</h2>
+                        </div>
+                    <hr />
 
                     <div class="uk-background-default uk-border-rounded-large uk-padding-large uk-margin">
                         <div id="5w-insights" uk-grid uk-scrollspy="target:div;delay:75;repeat: true;">
@@ -208,7 +208,7 @@
                                     <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen Campaign</div>
                                     <div class="fs-12 in fw-500">eBook, email &amp; landing page</div>
                                 </div>
-                                    <div class="uk-navbar-item"><a class="uk-background-muted uk-border-pill fw-500 uk-link-reset">Coming soon</a></div>
+                                <div class="uk-navbar-item"><a class="uk-background-muted uk-border-pill fw-500 uk-link-reset">Coming soon</a></div>
                             </div>
                         </div>
 
@@ -221,7 +221,7 @@
                                     <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Fundraising Appeal</div>
                                     <div class="fs-12 in fw-500">Direct Mail Package</div>
                                 </div>
-                                    <div class="uk-navbar-item"><a class="uk-background-muted uk-border-pill fw-500 uk-link-reset">Coming soon</a></div>
+                                <div class="uk-navbar-item"><a class="uk-background-muted uk-border-pill fw-500 uk-link-reset">Coming soon</a></div>
                             </div>
                         </div>
 
@@ -262,10 +262,10 @@
             <div class="uk-section uk-section-default">
                 <div class="uk-container uk-container-large">
                     <div class="uk-margin-left uk-margin-right">
-                        <div class="uk-text-left">
-                            <h2 class="fs-18 fw-500 uk-text-uppercase">// How coworkers describe me</h2>
-                            <hr />
-                        </div>
+                            <div class="uk-display-inline-block">
+                                <h2 class="fs-18 fw-500 uk-text-uppercase uk-margin-remove" uk-scrollspy="cls:typing">// How coworkers describe me</h2>
+                            </div>
+                        <hr />
 
                         <div class="uk-flex uk-grid">
                             <div class="uk-grid uk-grid-large uk-child-width-1-2@s uk-child-width-1-3@m fs-16" uk-grid="masonry: pack">
