Mobile nav updates

--- a/index.html
+++ b/index.html
@@ -40,10 +40,80 @@
                                     <li class="uk-padding-xsmall uk-padding-remove-vertical">
                                         <a class="uk-navbar-toggle uk-navbar-toggle-animate" href uk-navbar-toggle-icon></a>
                                         <div class="uk-dropbar uk-dropbar-top uk-width-expand uk-padding" uk-drop="stretch: y; animation:reveal-top; animate-out:true;mode:click">
-                                            <ul class="uk-nav uk-list uk-list-large uk-nav-default fs-16">
-                                                <li class="uk-nav-header fw-500">Current Projects</li>
+
+                                            <div class="in fw-600">// Current Projects</div>
+                                            <hr class="uk-margin-small" />
+
+                                            <a href="mack.html" class="uk-link-reset">
+                                                <div class="uk-background-muted uk-border-rounded-medium uk-padding-large uk-text-secondary">
+                                                    <div class="fs-18 fw-500 uk-margin-xsmall-bottom">Mack Trucks</div>
+                                                    <p class="fs-14 uk-margin-remove">Evolving a digital survey experience &rarr;</p>
+                                                </div>
+                                            </a>
+
+                                            <div class="uk-margin-medium-top in fw-600">// Past Work</div>
+                                            <hr class="uk-margin-small" />
+
+                                            <a href="5winsights.html"  class="uk-link-reset">
+                                                <div class="uk-background-muted uk-border-rounded-medium uk-padding-large uk-text-secondary">
+                                                    <div class="fs-18 fw-500 uk-margin-xsmall-bottom">5W Insights</div>
+                                                    <p class="fs-14 uk-margin-remove">Implementing a new brand identity &rarr;</p>
+                                                </div>
+                                            </a>
+
+
+                                            <div class="uk-margin-medium-top in fw-600">// Coming Soon</div>
+                                            <hr class="uk-margin-small" />
+
+                                            <div class="uk-container uk-container-large uk-position-relative" uk-slider="finite: true" uk-height-match="target: > div > div > div > div">
+
+                                                <div class="uk-slider-items uk-margin-top uk-margin-bottom" uk-height-match="target: > div > .uk-background-default">
+
+                                                    <div class="uk-width-small">
+                                                        <div class="uk-background-muted uk-border-rounded-medium uk-padding uk-text-secondary uk-margin-small-right">
+                                                            <div class="details">
+                                                                <div class="fs-16 fw-500 uk-margin-xsmall-bottom">American Addiction Centers</div>
+                                                                <p class="fs-14 uk-margin-remove">Lead Gen Campaign</p>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+
+                                                    <div class="uk-width-small">
+                                                        <div class="uk-background-muted uk-border-rounded-medium uk-padding uk-text-secondary uk-margin-small-right">
+                                                            <div class="details">
+                                                                <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Boy Scouts of America</div>
+                                                                <p class="fs-14 uk-margin-remove">Fundraising Appeal</p>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+
+                                                    <div class="uk-width-small">
+                                                        <div class="uk-background-muted uk-border-rounded-medium uk-padding uk-text-secondary uk-margin-small-right">
+                                                            <div>
+                                                                <div class="details">
+                                                                    <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Mack Trucks</div>
+                                                                    <p class="fs-14 uk-margin-remove">Lead Gen Survey</p>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+
+                                                    <div class="uk-width-small">
+                                                        <div class="uk-background-muted uk-border-rounded-medium uk-padding uk-text-secondary uk-margin-small-right">
+                                                            <div class="details">
+                                                                <div class="fs-16 fw-500 uk-margin-xsmall-bottom">RateGenius</div>
+                                                                <p class="fs-14 uk-margin-remove">Lead Gen Campaign</p>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+
+                                                </div>
+                                            </div>
+
+                                            <ul class="uk-nav uk-list uk-nav-default fs-16 uk-hidden">
+                                                <li class="uk-nav-header fw-500">Current Projects<br />
+                                                    <hr class="uk-margin-remove" /></li>
                                                 <li><a href="mack.html">Mack Trucks</a></li>
-                                                <li><hr /></li>
 
                                                 <li class="uk-nav-header fw-500 uk-margin-large-top">
                                                     Past Work
@@ -159,9 +229,9 @@
 
             <div class="uk-section" uk-height-viewport="expand:true">
                 <div class="uk-container uk-container-large">
-                        <div class="uk-display-inline-block">
-                            <h2 class="fs-18 fw-500 uk-text-uppercase uk-margin-remove" uk-scrollspy="cls:typing">// Past Work</h2>
-                        </div>
+                    <div class="uk-display-inline-block">
+                        <h2 class="fs-18 fw-500 uk-text-uppercase uk-margin-remove" uk-scrollspy="cls:typing">// Past Work</h2>
+                    </div>
                     <hr />
 
                     <div class="uk-background-default uk-border-rounded-large uk-padding-large uk-margin">
@@ -262,9 +332,9 @@
             <div class="uk-section uk-section-default">
                 <div class="uk-container uk-container-large">
                     <div class="uk-margin-left uk-margin-right">
-                            <div class="uk-display-inline-block">
-                                <h2 class="fs-18 fw-500 uk-text-uppercase uk-margin-remove" uk-scrollspy="cls:typing">// How coworkers describe me</h2>
-                            </div>
+                        <div class="uk-display-inline-block">
+                            <h2 class="fs-18 fw-500 uk-text-uppercase uk-margin-remove" uk-scrollspy="cls:typing">// How coworkers describe me</h2>
+                        </div>
                         <hr />
 
                         <div class="uk-flex uk-grid">
