--- a/index.html
+++ b/index.html
@@ -39,33 +39,45 @@
                                 <ul class="uk-navbar-nav">
                                     <li class="uk-padding-xsmall uk-padding-remove-vertical">
                                         <a class="uk-navbar-toggle uk-navbar-toggle-animate" href uk-navbar-toggle-icon></a>
-                                        <div class="uk-dropbar uk-dropbar-top uk-width-expand uk-padding" uk-drop="stretch: y; animation:reveal-top; animate-out:true;mode:click">
+                                        <div class="uk-dropbar uk-dropbar-top uk-width-expand uk-padding-remove" uk-drop="stretch: y; animation:reveal-top; animate-out:true;mode:click;dropbar-transparent-mode: behind;">
 
-                                            <div class="in fw-600">// Current Projects</div>
-                                            <hr class="uk-margin-small" />
+                                            <div class="uk-margin-large-left uk-margin-large-right uk-margin-top">
+                                                <div class="in fw-600">// Current Projects</div>
+                                                <hr class="uk-margin-small" />
 
-                                            <a href="mack.html" class="uk-link-reset">
-                                                <div class="uk-background-muted uk-border-rounded-medium uk-padding-large uk-text-secondary">
-                                                    <div class="fs-18 fw-500 uk-margin-xsmall-bottom">Mack Trucks</div>
-                                                    <p class="fs-14 uk-margin-remove">Evolving a digital survey experience &rarr;</p>
-                                                </div>
-                                            </a>
+                                                <a href="mack.html" class="uk-light">
+                                                    <div class="uk-border-rounded-medium uk-padding-large uk-text-secondary uk-background-cover uk-height-small uk-panel uk-flex uk-flex-center uk-flex-middle uk-overflow-hidden" style="background-image: url(img/mack/mack-driver-survey.webp);">
+                                                        <div class="uk-overlay-primary uk-position-cover"></div>
 
-                                            <div class="uk-margin-medium-top in fw-600">// Past Work</div>
-                                            <hr class="uk-margin-small" />
+                                                        <div class="uk-overlay uk-position-bottom">
+                                                            <div class="fs-18 fw-500 uk-margin-xsmall-bottom">Mack Trucks</div>
+                                                            <p class="fs-14 uk-margin-remove">Evolving a digital survey experience &rarr;</p>
+                                                        </div>
+                                                    </div>
+                                                </a>
 
-                                            <a href="5winsights.html"  class="uk-link-reset">
-                                                <div class="uk-background-muted uk-border-rounded-medium uk-padding-large uk-text-secondary">
-                                                    <div class="fs-18 fw-500 uk-margin-xsmall-bottom">5W Insights</div>
-                                                    <p class="fs-14 uk-margin-remove">Implementing a new brand identity &rarr;</p>
-                                                </div>
-                                            </a>
+                                                <div class="uk-margin-medium-top in fw-600">// Past Work</div>
+                                                <hr class="uk-margin-small" />
+
+                                                <a href="5winsights.html"  class="uk-light">
+                                                    <div class="uk-border-rounded-medium uk-padding-large uk-text-secondary uk-background-cover uk-height-small uk-panel uk-flex uk-flex-center uk-flex-middle uk-overflow-hidden" style="background-image: url(img/5winsights/conference-backdrop-mockup.webp)">
+                                                        <div class="uk-overlay-primary uk-position-cover"></div>
+
+                                                        <div class="uk-overlay uk-position-bottom">
+
+                                                            <div class="fs-18 fw-500 uk-margin-xsmall-bottom">5W Insights</div>
+                                                            <p class="fs-14 uk-margin-remove">Implementing a new brand identity &rarr;</p>
+                                                        </div>
+                                                    </div>
+                                                </a>
 
 
-                                            <div class="uk-margin-medium-top in fw-600">// Coming Soon</div>
-                                            <hr class="uk-margin-small" />
 
-                                            <div class="uk-container uk-container-large uk-position-relative" uk-slider="finite: true" uk-height-match="target: > div > div > div > div">
+                                                <div class="uk-margin-medium-top in fw-600">// Coming Soon</div>
+                                                <hr class="uk-margin-small" />
+                                            </div>
+
+                                            <div class="uk-margin-large-left uk-container uk-container-large uk-position-relative" uk-slider="finite: true" uk-height-match="target: > div > div > div > div">
 
                                                 <div class="uk-slider-items uk-margin-top uk-margin-bottom" uk-height-match="target: > div > .uk-background-default">
 
