Mobile nav test

--- a/index.html
+++ b/index.html
@@ -39,47 +39,53 @@
                                 <ul class="uk-navbar-nav">
                                     <li class="uk-padding-xsmall uk-padding-remove-vertical">
                                         <a class="uk-navbar-toggle uk-navbar-toggle-animate" href uk-navbar-toggle-icon></a>
-                                        <div class="uk-dropbar uk-dropbar-top uk-width-expand uk-padding-remove" uk-drop="stretch: y; animation:reveal-top; animate-out:true;mode:click;dropbar-transparent-mode: behind;">
+                                        <div class="uk-dropbar uk-dropbar-top uk-width-expand uk-padding-remove" uk-drop="stretch: y; animation:reveal-top; animate-out:true;mode:click">
 
-                                            <div class="uk-margin-large-left uk-margin-large-right uk-margin-top">
-                                                <div class="in fw-600">// Current Projects</div>
+                                            <div class="uk-margin-left uk-margin-right uk-margin-top">
+                                                <div class="in fw-600 uk-text-secondary uk-text-uppercase">// Select design Samples</div>
                                                 <hr class="uk-margin-small" />
 
-                                                <a href="mack.html" class="uk-light">
-                                                    <div class="uk-border-rounded-medium uk-padding-large uk-text-secondary uk-background-cover uk-height-small uk-panel uk-flex uk-flex-center uk-flex-middle uk-overflow-hidden" style="background-image: url(img/mack/mack-driver-survey.webp);">
-                                                        <div class="uk-overlay-primary uk-position-cover"></div>
+                                                <div class="">
+                                                    <div class="uk-grid-small uk-child-width-1-2" uk-grid>
+                                                    <div class="uk-margin-small-bottom">
+                                                        <a href="mack.html" class="uk-light">
+                                                            <div class="uk-border-rounded-medium uk-text-secondary uk-background-cover uk-height-large uk-panel uk-flex uk-flex-center uk-flex-middle uk-overflow-hidden " style="background-image: url(img/mack/mack-driver-survey.webp);">
 
-                                                        <div class="uk-overlay uk-position-bottom">
-                                                            <div class="fs-18 fw-500 uk-margin-xsmall-bottom">Mack Trucks</div>
-                                                            <p class="fs-14 uk-margin-remove">Evolving a digital survey experience &rarr;</p>
-                                                        </div>
+                                                                <div class="uk-overlay-primary uk-position-cover"></div>
+
+                                                                <div class="uk-overlay uk-position-bottom">
+                                                                    <div class="fs-20 fw-500 uk-margin-xsmall-bottom uk-box-shadow-large">Mack Trucks</div>
+                                                                    <p class="fs-14 uk-margin-remove-top uk-margin-small-bottom">Evolving a digital survey experience&nbsp;&rarr;</p>
+                                                                    <div class="uk-label uk-background-muted uk-border-pill fs-10 fw-400 ">Current Project</div>
+                                                                </div>
+                                                            </div>
+                                                        </a>
                                                     </div>
-                                                </a>
 
-                                                <div class="uk-margin-medium-top in fw-600">// Past Work</div>
-                                                <hr class="uk-margin-small" />
+                                                    <div>
+                                                        <a href="5winsights.html"  class="uk-light">
+                                                            <div class="uk-border-rounded-medium uk-text-secondary uk-background-cover uk-height-large uk-panel uk-flex uk-flex-center uk-flex-middle uk-overflow-hidden" style="background-image: url(img/5winsights/conference-backdrop-mockup.webp)">
 
-                                                <a href="5winsights.html"  class="uk-light">
-                                                    <div class="uk-border-rounded-medium uk-padding-large uk-text-secondary uk-background-cover uk-height-small uk-panel uk-flex uk-flex-center uk-flex-middle uk-overflow-hidden" style="background-image: url(img/5winsights/conference-backdrop-mockup.webp)">
-                                                        <div class="uk-overlay-primary uk-position-cover"></div>
+                                                                <div class="uk-overlay-primary uk-position-cover"></div>
 
-                                                        <div class="uk-overlay uk-position-bottom">
-
-                                                            <div class="fs-18 fw-500 uk-margin-xsmall-bottom">5W Insights</div>
-                                                            <p class="fs-14 uk-margin-remove">Implementing a new brand identity &rarr;</p>
-                                                        </div>
+                                                                <div class="uk-overlay uk-position-bottom">
+                                                                    <div class="fs-20 fw-500 uk-margin-xsmall-bottom">5W Insights</div>
+                                                                    <p class="fs-14 uk-margin-remove-top uk-margin-small-bottom">Implementing a new brand identity&nbsp;&rarr;</p>
+                                                                    <div class="uk-label uk-background-muted uk-border-pill fs-10 fw-400">Past Work</div>
+                                                                </div>
+                                                            </div>
+                                                        </a>
                                                     </div>
-                                                </a>
+                                                        </div>
+                                                </div>
 
-
-
-                                                <div class="uk-margin-medium-top in fw-600">// Coming Soon</div>
-                                                <hr class="uk-margin-small" />
+                                                <div class="uk-margin-medium-top in fw-600 uk-text-secondary uk-text-uppercase">// Coming Soon</div>
+                                                <hr class="uk-margin-small uk-margin-remove-bottom" />
                                             </div>
 
-                                            <div class="uk-margin-large-left uk-container uk-container-large uk-position-relative" uk-slider="finite: true" uk-height-match="target: > div > div > div > div">
+                                            <div class="uk-margin-left uk-container uk-container-large uk-position-relative" uk-slider="finite: true" uk-height-match="target: > div > div > div > div">
 
-                                                <div class="uk-slider-items uk-margin-top uk-margin-bottom" uk-height-match="target: > div > .uk-background-default">
+                                                <div class="uk-slider-items uk-margin-small-top uk-margin-bottom" uk-height-match="target: > div > .uk-background-default">
 
                                                     <div class="uk-width-small">
                                                         <div class="uk-background-muted uk-border-rounded-medium uk-padding uk-text-secondary uk-margin-small-right">
